# nfloppy

./: .clang-format  .gitignore  .pre-commit-config.yaml  Makefile  README.md  meson.build  x86_64-w64-mingw32.txt
include/: bird.hpp  defaults.hpp  font.hpp  game.hpp  texture.hpp  tube.hpp  utils.hpp
include/common/: logger.hpp  range_random.hpp  timer.hpp
include/entities/: background.hpp  base.hpp  bird.hpp  entities.hpp  entity.hpp  fps_counter.hpp  tube.hpp
include/math/: vec2.hpp
include/ui/: renderer.hpp  window.hpp
include/ui/texture/: animated_texture.hpp  static_texture.hpp  texture.hpp  texture_pathes.hpp
include/world/: world.hpp  world_settings.hpp
include/world/entities/: background.hpp  base.hpp  bird.hpp  entities.hpp  entity.hpp  entity_id.hpp  pipe.hpp
src/: bird.cpp  game.cpp  main.cpp  meson.build  texture.cpp  tube.cpp  utils.cpp
src/common/: logger.cpp  meson.build  range_random.cpp  timer.cpp
src/entities/: background.cpp  base.cpp  bird.cpp  entity.cpp  fps_counter.cpp  meson.build  tube.cpp
src/math/: meson.build  vec2.cpp
src/ui/: meson.build  renderer.cpp  window.cpp
src/ui/texture/: animated_texture.cpp  meson.build  static_texture.cpp  texture.cpp  texture_pathes.cpp
src/world/: meson.build  world.cpp  world_settings.cpp
src/world/entities/: background.cpp  base.cpp  bird.cpp  entities.cpp  entity.cpp  meson.build  pipe.cpp
subprojects/: sdl2-image.wrap  sdl2-ttf.wrap  sdl2.wrap
